--- a/1BasicAlogrithm/8.HighLevel.ipynb
+++ b/1BasicAlogrithm/8.HighLevel.ipynb
@@ -3403,6 +3403,542 @@
     "ans = Solution()\n",
     "ans.findAndReplacePattern(words, pattern)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f499bc9-f6e1-4317-b7dc-a87bd7c46ea7",
+   "metadata": {},
+   "source": [
+    "# 70 2679. 矩阵中的和\n",
+    "https://leetcode.cn/problems/sum-in-a-matrix/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "f740f283-067f-4eee-b089-2f61cbd6ee6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "class Solution:\n",
+    "    def matrixSum(self, nums):\n",
+    "        nums = [sorted(i) for i in nums]\n",
+    "        s = np.array(nums)\n",
+    "        res = np.max(s,axis=0)\n",
+    "        return int(sum(res))\n",
+    "\n",
+    "nums = [[7,2,1],[6,4,2],[6,5,3],[3,2,1]]\n",
+    "nums = [[1]]\n",
+    "nums = [[7,2,1],[6,4,2],[6,5,3],[3,2,1]]\n",
+    "ans = Solution()\n",
+    "ans.matrixSum(nums)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4710d45e-f509-4e2a-837a-e5b226884a8a",
+   "metadata": {},
+   "source": [
+    "# 71 2740. 找出分区值\n",
+    "https://leetcode.cn/problems/find-the-value-of-the-partition/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "8c5a01c9-e37b-4d84-9612-836a97f4d5d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from itertools import pairwise\n",
+    "class Solution:\n",
+    "    def findValueOfPartition(self, nums):\n",
+    "        nums.sort()\n",
+    "        res = float(\"inf\")\n",
+    "        for i, j in pairwise(nums):\n",
+    "            res = min(res, j - i)\n",
+    "        return res\n",
+    "\n",
+    "nums = [1,3,2,4]\n",
+    "ans = Solution()\n",
+    "ans.findValueOfPartition(nums)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "efe95beb-6297-4f0e-80c9-1464ca7ff914",
+   "metadata": {},
+   "source": [
+    "# 72 763. 划分字母区间\n",
+    "https://leetcode.cn/problems/partition-labels/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "7d4f0a12-bd0d-4a13-8fc5-8f7ecf0f53f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[9, 7, 8]"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def partitionLabels(self, s):\n",
+    "        last = {c: i for i, c in enumerate(s)}\n",
+    "        ans = []\n",
+    "        start = end = 0\n",
+    "        for i, c in enumerate(s):\n",
+    "            end = max(end, last[c])\n",
+    "            if end == i:\n",
+    "                ans.append(end - start + 1)\n",
+    "                start = i + 1\n",
+    "        return ans\n",
+    "            \n",
+    "\n",
+    "s = \"ababcbacadefegdehijhklij\"\n",
+    "ans = Solution()\n",
+    "ans.partitionLabels(s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7198265-4061-49fa-b4b6-e4e76f7aeef0",
+   "metadata": {},
+   "source": [
+    "# 73 2785. 将字符串中的元音字母排序\n",
+    "https://leetcode.cn/problems/sort-vowels-in-a-string/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "2ba71bc2-a424-4ed6-b188-7e84823f2486",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'lYmpH'"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def sortVowels(self, s):\n",
+    "        target = \"AEIOUaeiou\"\n",
+    "        yuan = []\n",
+    "        for i in s:\n",
+    "            if i in target:\n",
+    "                yuan.append(i)\n",
+    "        yuan.sort(reverse=True)\n",
+    "        s = list(s)\n",
+    "        for i in range(len(s)):\n",
+    "            if s[i] in target:\n",
+    "                x = yuan.pop()\n",
+    "                s[i] = x\n",
+    "        return \"\".join(s)\n",
+    "            \n",
+    "\n",
+    "s = \"lEetcOde\"\n",
+    "s = \"lYmpH\"\n",
+    "ans = Solution()\n",
+    "ans.sortVowels(s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7aa259f6-93f0-49d2-99fc-63e30b8fb526",
+   "metadata": {},
+   "source": [
+    "# 74 877. 石子游戏\n",
+    "https://leetcode.cn/problems/stone-game/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "35fbef51-90bf-4415-aaba-2dd61f173c4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def stoneGame(self, piles):\n",
+    "        return True\n",
+    "        \n",
+    "piles = [5,3,4,5]\n",
+    "ans = Solution()\n",
+    "ans.stoneGame(piles)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a1cb46b-6981-4125-8ff0-14cde3402a03",
+   "metadata": {},
+   "source": [
+    "# 75 48. 旋转图像\n",
+    "https://leetcode.cn/problems/rotate-image/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "id": "e1fc1bf7-3f7a-41ff-b2ee-46827414581e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[15, 13, 2, 5], [14, 3, 4, 1], [12, 6, 8, 9], [16, 7, 10, 11]]"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "class Solution:\n",
+    "    def rotate(self, matrix):\n",
+    "        \"\"\"\n",
+    "        Do not return anything, modify matrix in-place instead.\n",
+    "        \"\"\"\n",
+    "        s = np.matrix(matrix)\n",
+    "        s = s.T\n",
+    "        s= np.flip(s,axis=1)\n",
+    "        x, y = s.shape\n",
+    "        for i in range(x):\n",
+    "            for j in range(y):\n",
+    "                matrix[i][j] = s[i,j]\n",
+    "        return matrix\n",
+    "        \n",
+    "matrix = [[1,2,3],[4,5,6],[7,8,9]]\n",
+    "matrix = [[5,1,9,11],[2,4,8,10],[13,3,6,7],[15,14,12,16]]\n",
+    "ans = Solution()\n",
+    "ans.rotate(matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "id": "b66cd266-580d-4fc8-b73e-8605dbafc74d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[7, 4, 1], [8, 5, 2], [9, 6, 3]]"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def rotate(self, matrix):\n",
+    "        \"\"\"\n",
+    "        Do not return anything, modify matrix in-place instead.\n",
+    "        \"\"\"\n",
+    "        matrix[:] = [list(t)[::-1] for t in zip(*matrix)]\n",
+    "        return matrix\n",
+    "        \n",
+    "matrix = [[1,2,3],[4,5,6],[7,8,9]]\n",
+    "#matrix = [[5,1,9,11],[2,4,8,10],[13,3,6,7],[15,14,12,16]]\n",
+    "ans = Solution()\n",
+    "ans.rotate(matrix)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aff1441b-e1f6-46d5-85f4-372cfddb92eb",
+   "metadata": {},
+   "source": [
+    "# 76 386. 字典序排数\n",
+    "https://leetcode.cn/problems/lexicographical-numbers/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "id": "5e62994f-9957-4b7a-9050-52005d4a44d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 10, 11, 12, 13, 2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def lexicalOrder(self, n):\n",
+    "        s = [str(i) for i in range(1, n + 1)]\n",
+    "        s.sort()\n",
+    "        res = [int(i) for i in s]\n",
+    "        return res\n",
+    "        \n",
+    "n = 13\n",
+    "ans = Solution()\n",
+    "ans.lexicalOrder(n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18423e09-96f9-4bda-ae78-ba9957ba12ce",
+   "metadata": {},
+   "source": [
+    "# 77 2428. 沙漏的最大总和\n",
+    "https://leetcode.cn/problems/maximum-sum-of-an-hourglass/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0aeda713-b04e-43b9-9cbd-aee5646754e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "class Solution:\n",
+    "    def maxSum(self, grid):\n",
+    "        s = np.matrix(grid)\n",
+    "        m, n = s.shape\n",
+    "        x = m - 3\n",
+    "        y = n - 3\n",
+    "        res = 0\n",
+    "        for i in range(x + 1):\n",
+    "            for j in range(y + 1):\n",
+    "                temp = s[i:i+3, j:j+3]\n",
+    "                ans = np.sum(temp) -temp[1,0] - temp[1,2]\n",
+    "                res = max(res, ans)\n",
+    "        return int(res)\n",
+    "\n",
+    "\n",
+    "grid = [[6,2,1,3],[4,2,1,5],[9,2,8,7],[4,1,2,9]]\n",
+    "ans = Solution()\n",
+    "ans.maxSum(grid)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ba78ac8-e48b-46f4-a3a7-08a4e1bb8b93",
+   "metadata": {},
+   "source": [
+    "# 78 1877. 数组中最大数对和的最小值\n",
+    "https://leetcode.cn/problems/minimize-maximum-pair-sum-in-array/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "id": "a0e4947f-8994-4382-b28c-0eab31209808",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 192,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def minPairSum(self, nums):\n",
+    "        nums.sort()\n",
+    "        left, right, res = 0, len(nums) - 1, 0\n",
+    "        while left < right:\n",
+    "            res = max(nums[left] + nums[right], res)\n",
+    "            left += 1\n",
+    "            right -= 1\n",
+    "        return res\n",
+    "\n",
+    "nums = [3,5,2,3]\n",
+    "nums = [3,5,4,2,4,6]\n",
+    "ans = Solution()\n",
+    "ans.minPairSum(nums)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aafa35eb-3a00-43b2-a14b-253057f979a1",
+   "metadata": {},
+   "source": [
+    "# 79 2405. 子字符串的最优划分\n",
+    "https://leetcode.cn/problems/optimal-partition-of-string/description/sorted(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "id": "edc1c50c-74b9-4151-b5a6-76c2ef15364e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 206,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def partitionString(self, s):\n",
+    "        res = 0\n",
+    "        cur = \"\"\n",
+    "        for i in s:\n",
+    "            if i not in cur:\n",
+    "                cur += i\n",
+    "            else:\n",
+    "                res += 1\n",
+    "                cur = i\n",
+    "        return res + 1\n",
+    "        \n",
+    "s = \"abacaba\"\n",
+    "s = \"hdklqkcssgxlvehva\"\n",
+    "s = \"ssssss\"\n",
+    "ans = Solution()\n",
+    "ans.partitionString(s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8884d61a-a42e-4c68-b04b-b69ee27b189f",
+   "metadata": {},
+   "source": [
+    "# 80 2023. 连接后等于目标字符串的字符串对\n",
+    "https://leetcode.cn/problems/number-of-pairs-of-strings-with-concatenation-equal-to-target/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "id": "e817c8f3-199d-4bc3-af80-5fb645c12038",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 211,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from itertools import permutations\n",
+    "class Solution:\n",
+    "    def numOfPairs(self, nums, target):\n",
+    "        res = 0\n",
+    "        s = permutations(nums, 2)\n",
+    "        for i in s:\n",
+    "            if i[0] + i[1] == target:\n",
+    "                res += 1\n",
+    "        return res\n",
+    "            \n",
+    "nums = [\"777\",\"7\",\"77\",\"77\"]\n",
+    "target = \"7777\"\n",
+    "nums = [\"1\",\"1\",\"1\"]\n",
+    "target = \"11\"\n",
+    "ans = Solution()\n",
+    "ans.numOfPairs(nums, target)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b83b7a66-09ee-4d65-becc-469de71515e4",
+   "metadata": {},
+   "source": [
+    "# 81 面试题 10.02. 变位词组\n",
+    "https://leetcode.cn/problems/group-anagrams-lcci/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "id": "56db9cc3-909b-4437-87d7-3875e928188d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['eat', 'tea', 'ate'], ['tan', 'nat'], ['bat']]"
+      ]
+     },
+     "execution_count": 225,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "class Solution:\n",
+    "    def groupAnagrams(self, strs):\n",
+    "        strs = [(\"\".join(sorted(i)), i) for i in strs]\n",
+    "        s = defaultdict(list)\n",
+    "        for i,j in strs:\n",
+    "            s[i].append(j)\n",
+    "        res = []\n",
+    "        for i in s:\n",
+    "            res.append(s[i])\n",
+    "        return res\n",
+    "\n",
+    "strs = [\"eat\", \"tea\", \"tan\", \"ate\", \"nat\", \"bat\"]\n",
+    "ans = Solution()\n",
+    "ans.groupAnagrams(strs)"
+   ]
   }
  ],
  "metadata": {
