--- a/1BasicAlogrithm/8.HighLevel.ipynb
+++ b/1BasicAlogrithm/8.HighLevel.ipynb
@@ -3902,7 +3902,11 @@
    "metadata": {},
    "source": [
     "# 81 面试题 10.02. 变位词组\n",
-    "https://leetcode.cn/problems/group-anagrams-lcci/description/"
+    "https://leetcode.cn/problems/group-anagrams-lcci/description/\n",
+    "\n",
+    "LCR 033. 字母异位词分组\n",
+    "\n",
+    "https://leetcode.cn/problems/sfvd7V/description/"
    ]
   },
   {
@@ -3938,6 +3942,599 @@
     "strs = [\"eat\", \"tea\", \"tan\", \"ate\", \"nat\", \"bat\"]\n",
     "ans = Solution()\n",
     "ans.groupAnagrams(strs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b33393b-6b2a-47d3-9d36-20c9bb0b060e",
+   "metadata": {},
+   "source": [
+    "# 82 1780. 判断一个数字是否可以表示成三的幂的和\n",
+    "\n",
+    "https://leetcode.cn/problems/check-if-number-is-a-sum-of-powers-of-three/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "id": "34d4ee2d-8f04-450f-8cc5-400d89389af3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 228,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def checkPowersOfThree(self, n):\n",
+    "        while n:\n",
+    "            if n % 3 == 1:\n",
+    "                n -= 1\n",
+    "            if n % 3 != 0:\n",
+    "                return False\n",
+    "            n //= 3\n",
+    "        return True\n",
+    "\n",
+    "n = 21\n",
+    "ans = Solution()\n",
+    "ans.checkPowersOfThree(n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a0da932-d7a6-419f-8e5f-a6abe3580381",
+   "metadata": {},
+   "source": [
+    "# 83 1314. 矩阵区域和\n",
+    "https://leetcode.cn/problems/matrix-block-sum/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 263,
+   "id": "255b51cb-c975-4fec-abe8-ca17597be876",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[45, 45, 45], [45, 45, 45], [45, 45, 45]]"
+      ]
+     },
+     "execution_count": 263,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "class Solution:\n",
+    "    def matrixBlockSum(self, mat, k):\n",
+    "        mats = np.matrix(mat)\n",
+    "        m, n = mats.shape\n",
+    "        res = np.zeros(shape = (m, n), dtype= int)\n",
+    "        for i in range(m):\n",
+    "            for j in range(n):\n",
+    "                x = np.sum(mats[max(i - k, 0): min(i + k + 1, m), max(j - k, 0): min(j + k + 1, n)])\n",
+    "                res[i,j] = x\n",
+    "        return res.tolist()\n",
+    "            \n",
+    "\n",
+    "mat = [[1,2,3],[4,5,6],[7,8,9]]\n",
+    "k = 1\n",
+    "mat = [[1,2,3],[4,5,6],[7,8,9]] \n",
+    "k = 2\n",
+    "ans = Solution()\n",
+    "ans.matrixBlockSum(mat, k)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18de67e7-6f69-43e2-8506-0100c6a6a62c",
+   "metadata": {},
+   "source": [
+    "# 84  442. 数组中重复的数据\n",
+    "\n",
+    "https://leetcode.cn/problems/find-all-duplicates-in-an-array/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 266,
+   "id": "53cf7987-7b2a-4dc8-9e6c-4cf465bb7410",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 2]"
+      ]
+     },
+     "execution_count": 266,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "class Solution:\n",
+    "    def findDuplicates(self, nums):\n",
+    "        s = Counter(nums)\n",
+    "        res = []\n",
+    "        for i in s:\n",
+    "            if s[i] == 2:\n",
+    "                res.append(i)\n",
+    "        return res\n",
+    "\n",
+    "nums = [4,3,2,7,8,2,3,1]\n",
+    "ans = Solution()\n",
+    "ans.findDuplicates(nums)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f23f438-d4ea-485c-a6b7-046e750e7a96",
+   "metadata": {},
+   "source": [
+    "# 85 406. queue-reconstruction-by-height\n",
+    "https://leetcode.cn/problems/queue-reconstruction-by-height/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 274,
+   "id": "9c09f277-bc43-49e9-88d9-ee4db56b1de0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[5, 0], [7, 0], [5, 2], [6, 1], [4, 4], [7, 1]]"
+      ]
+     },
+     "execution_count": 274,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def reconstructQueue(self, people):\n",
+    "        people.sort(key = lambda x: (-x[0], x[1]))\n",
+    "        res = []\n",
+    "        for p in people:\n",
+    "            if len(res) <= p[1]:\n",
+    "                res.append(p)\n",
+    "            elif len(res) > p[1]:\n",
+    "                res.insert(p[1], p)\n",
+    "        return res\n",
+    "\n",
+    "\n",
+    "people = [[7,0],[4,4],[7,1],[5,0],[6,1],[5,2]]\n",
+    "ans = Solution()\n",
+    "ans.reconstructQueue(people)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a4c6084-591c-48b5-b061-140f946fd9f9",
+   "metadata": {},
+   "source": [
+    "# 85  2442. 反转之后不同整数的数目\n",
+    "https://leetcode.cn/problems/count-number-of-distinct-integers-after-reverse-operations/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 281,
+   "id": "7f301b42-7ad1-484c-a8da-86a4189832cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 281,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def countDistinctIntegers(self, nums):\n",
+    "        n = len(nums)\n",
+    "        for i in range(n):\n",
+    "            x = \"\".join(str(nums[i])[::-1])\n",
+    "            nums.append(int(x))\n",
+    "        return len(set(nums))\n",
+    "        \n",
+    "nums = [1,13,10,12,31]\n",
+    "nums = [2,2,2]\n",
+    "ans = Solution()\n",
+    "ans.countDistinctIntegers(nums)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20e17754-4a3a-41b7-a63e-68fbe61fdc32",
+   "metadata": {},
+   "source": [
+    "# 86 LCR 038. 每日温度\n",
+    "\n",
+    "https://leetcode.cn/problems/iIQa4I/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 286,
+   "id": "d607c544-692d-436f-84ec-cfcd588d7535",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 1, 0]"
+      ]
+     },
+     "execution_count": 286,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def dailyTemperatures(self, temperatures):\n",
+    "        res = []\n",
+    "        n = len(temperatures)\n",
+    "        for i in range(n):\n",
+    "            for j in range(i, n):\n",
+    "                if temperatures[j] > temperatures[i]:\n",
+    "                    res.append(j - i)\n",
+    "                    break\n",
+    "                elif j == n-1:\n",
+    "                    res.append(0)\n",
+    "        return res\n",
+    "                    \n",
+    "        \n",
+    "temperatures = [73,74,75,71,69,72,76,73]\n",
+    "temperatures = [30,40,50,60]\n",
+    "temperatures = [30,60,90]\n",
+    "ans = Solution()\n",
+    "ans.dailyTemperatures(temperatures)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 287,
+   "id": "088e8764-913d-4799-b961-f8a91e6ab9be",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 1, 0]"
+      ]
+     },
+     "execution_count": 287,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def dailyTemperatures(self, temperatures):\n",
+    "        stack = []\n",
+    "        res = [0] * len(temperatures)\n",
+    "        for i, temp in enumerate(temperatures):\n",
+    "            while stack and temp > stack[-1][1]:\n",
+    "                idx = stack.pop()[0]\n",
+    "                res[idx] = i - idx\n",
+    "            stack.append((i, temp))\n",
+    "        return res\n",
+    "\n",
+    "temperatures = [73,74,75,71,69,72,76,73]\n",
+    "temperatures = [30,40,50,60]\n",
+    "temperatures = [30,60,90]\n",
+    "ans = Solution()\n",
+    "ans.dailyTemperatures(temperatures)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9231ade9-4f1a-4136-9836-8077ea00a5f4",
+   "metadata": {},
+   "source": [
+    "# 87 1630. arithmetic-subarrays\n",
+    "https://leetcode.cn/problems/arithmetic-subarrays/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 298,
+   "id": "cafdbc86-40e0-4d19-83ca-052616c3ca4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[False, True, False, False, True, True]"
+      ]
+     },
+     "execution_count": 298,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from itertools import pairwise\n",
+    "class Solution:\n",
+    "    def checkArithmeticSubarrays(self, nums, l, r):\n",
+    "        res = []\n",
+    "        query = zip(l, r)\n",
+    "        for i, j in query:\n",
+    "            temp = nums[i: j + 1]\n",
+    "            temp.sort()\n",
+    "            k = set()\n",
+    "            for m in pairwise(temp):\n",
+    "                k.add(m[1] - m[0])\n",
+    "            if len(k) == 1:\n",
+    "                res.append(True)\n",
+    "            else:\n",
+    "                res.append(False)\n",
+    "        return res\n",
+    "        \n",
+    "nums = [4,6,5,9,3,7]\n",
+    "l = [0,0,2]\n",
+    "r = [2,3,5]\n",
+    "nums = [-12,-9,-3,-12,-6,15,20,-25,-20,-15,-10]\n",
+    "l = [0,1,6,4,8,7]\n",
+    "r = [4,4,9,7,9,10] #[false,true,false,false,true,true]\n",
+    "ans = Solution()\n",
+    "ans.checkArithmeticSubarrays(nums, l, r)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9df36d1d-0de3-45fb-a29b-5f49633596fe",
+   "metadata": {},
+   "source": [
+    "# 88 791. 自定义字符串排序\n",
+    "\n",
+    "https://leetcode.cn/problems/custom-sort-string/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 315,
+   "id": "77d2ea3f-8960-4a29-956f-7bd1e591d1ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'cbad'"
+      ]
+     },
+     "execution_count": 315,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "class Solution:\n",
+    "    def customSortString(self, order, s):\n",
+    "        d = defaultdict()\n",
+    "        for i, j in enumerate(order):\n",
+    "            d[j] = i\n",
+    "        temp = []\n",
+    "        other = []\n",
+    "        for i in s:\n",
+    "            if i in d:\n",
+    "                temp.append((d[i], i))\n",
+    "            else: \n",
+    "                other.append(i)\n",
+    "        res = []\n",
+    "        temp.sort()\n",
+    "        for i in temp:\n",
+    "            res.append(i[1])\n",
+    "        return \"\".join(res + other)\n",
+    "\n",
+    "order = \"cba\"\n",
+    "s = \"abcd\"\n",
+    "order = \"cbafg\"\n",
+    "s = \"abcd\"\n",
+    "ans = Solution()\n",
+    "ans.customSortString(order, s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2c2a5e1-466e-4266-92c3-c8ecfb0e71d8",
+   "metadata": {},
+   "source": [
+    "# 89 1277. 统计全为 1 的正方形子矩阵\n",
+    "\n",
+    "https://leetcode.cn/problems/count-square-submatrices-with-all-ones/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 341,
+   "id": "88e96379-a786-412c-a525-383b5bc0da23",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 341,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def countSquares(self, matrix):\n",
+    "        m, n = len(matrix), len(matrix[0])\n",
+    "\n",
+    "        dp = [[0] * (n + 1) for _ in range(m + 1)]\n",
+    "\n",
+    "        for i in range(m):\n",
+    "            for j in range(n):\n",
+    "                if matrix[i][j] > 0:\n",
+    "                    dp[i + 1][j + 1] = min(dp[i][j], dp[i][ j+ 1], dp[i + 1][j]) + 1\n",
+    "        return sum([sum(dp[i]) for i in range(1, m+ 1)])\n",
+    "\n",
+    "            \n",
+    "matrix =[[0,1,1,1], [1,1,1,1],[0,1,1,1]]\n",
+    "ans = Solution()\n",
+    "ans.countSquares(matrix)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c9c3555-a898-4365-a319-af3d6c995a87",
+   "metadata": {},
+   "source": [
+    "# 90 1222. 可以攻击国王的皇后\n",
+    "https://leetcode.cn/problems/queens-that-can-attack-the-king/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 354,
+   "id": "cca6e3b2-8d10-4b0b-8385-b75efabeecf5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[4, 4], [3, 4], [2, 2]]"
+      ]
+     },
+     "execution_count": 354,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def queensAttacktheKing(self, queens, king):\n",
+    "        res = []\n",
+    "        queens = [(i[0], i[1]) for i in queens]\n",
+    "        for dx, dy in [(1, 0), (1, 1), (0, 1), (-1, 0), (-1, 1), (-1, -1), (0, -1), (1, -1)]:\n",
+    "            x, y = king[0] + dx, king[1] + dy\n",
+    "            while 0 <= x <= 8 and 0 <= y <=8: \n",
+    "                if (x, y) in queens:\n",
+    "                    res.append([x, y])\n",
+    "                    break\n",
+    "                x += dx\n",
+    "                y += dy\n",
+    "        return res\n",
+    "        \n",
+    "\n",
+    "queens = [[0,1],[1,0],[4,0],[0,4],[3,3],[2,4]]\n",
+    "king = [0,0]\n",
+    "queens = [[0,0],[1,1],[2,2],[3,4],[3,5],[4,4],[4,5]]\n",
+    "king = [3,3]\n",
+    "ans = Solution()\n",
+    "ans.queensAttacktheKing(queens, king)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6faf04ee-2a38-4923-8679-8a68dad91ccf",
+   "metadata": {},
+   "source": [
+    "# 91 2390. 从字符串中移除星号\n",
+    "https://leetcode.cn/problems/removing-stars-from-a-string/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 364,
+   "id": "1d6acedd-a8c2-4338-994c-3a2c6fbe72fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'lecoe'"
+      ]
+     },
+     "execution_count": 364,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def removeStars(self, s):\n",
+    "        res = []\n",
+    "        for i in s:\n",
+    "            if i == \"*\":\n",
+    "                res.pop()\n",
+    "            else:\n",
+    "                res.append(i)\n",
+    "        return \"\".join(res)\n",
+    "        \n",
+    "s = \"leet**cod*e\"\n",
+    "#s = \"erase*****\"\n",
+    "ans = Solution()\n",
+    "ans.removeStars(s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bcbb2e26-515a-4217-a6e4-042dc1a3576d",
+   "metadata": {},
+   "source": [
+    "# 92 2352. 相等行列对\n",
+    "https://leetcode.cn/problems/equal-row-and-column-pairs/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 387,
+   "id": "328d48bb-eb13-4468-929c-00b79137a8da",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 387,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def equalPairs(self, grid):\n",
+    "        g = [list(col) for col in zip(*grid)]\n",
+    "        return sum(row == col for row in grid for col in g)\n",
+    "\n",
+    "grid = [[3,2,1],[1,7,6],[2,7,7]]\n",
+    "grid = [[3,1,2,2],[1,4,4,5],[2,4,2,2],[2,4,2,2]]\n",
+    "#grid = [[3,1,2,2],[1,4,4,4],[2,4,2,2],[2,5,2,2]] #3\n",
+    "#grid = [[11,1],[1,11]] # 2\n",
+    "\n",
+    "ans = Solution()\n",
+    "ans.equalPairs(grid)"
    ]
   }
  ],
