--- a/1BasicAlogrithm/8.HighLevel.ipynb
+++ b/1BasicAlogrithm/8.HighLevel.ipynb
@@ -4536,6 +4536,153 @@
     "ans = Solution()\n",
     "ans.equalPairs(grid)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2c8d025-9856-45fb-8f9a-5a4ee03132f5",
+   "metadata": {},
+   "source": [
+    "# 93 784. 字母大小写全排列\n",
+    "https://leetcode.cn/problems/letter-case-permutation/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 402,
+   "id": "4f7d0007-5eeb-4207-967b-a696781fb464",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['3z4', '3Z4']"
+      ]
+     },
+     "execution_count": 402,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def letterCasePermutation(self, s):\n",
+    "        res = [\"\"]\n",
+    "        for i in s:\n",
+    "            if i.isdigit():\n",
+    "                res = [c + i for c in res]\n",
+    "            else:\n",
+    "                res = [c + i.lower() for c in res] + [c + i.upper() for c in res]\n",
+    "        return res\n",
+    "        \n",
+    "        \n",
+    "s = \"a1b2\"\n",
+    "s = \"3z4\"\n",
+    "ans = Solution()\n",
+    "ans.letterCasePermutation(s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16e2081c-5398-4ae5-8969-3d5fe03d8751",
+   "metadata": {},
+   "source": [
+    "# 94 面试题 17.11. 单词距离\n",
+    "https://leetcode.cn/problems/find-closest-lcci/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 406,
+   "id": "2b0f3e68-6d58-40b1-911f-39aa3c09de5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 406,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def findClosest(self, words, word1 , word2):\n",
+    "        s1, s2 = [], []\n",
+    "        for idx, c in enumerate(words):\n",
+    "            if c == word1:\n",
+    "                s1.append(idx)\n",
+    "            elif c == word2:\n",
+    "                s2.append(idx)\n",
+    "        res = float(\"inf\")\n",
+    "        temp = 1\n",
+    "        for i in s1:\n",
+    "            for j in s2:\n",
+    "                res = min(res, abs(i - j))\n",
+    "        return res\n",
+    "        \n",
+    "\n",
+    "words = [\"I\",\"am\",\"a\",\"student\",\"from\",\"a\",\"university\",\"in\",\"a\",\"city\"]\n",
+    "word1 = \"a\"\n",
+    "word2 = \"student\"\n",
+    "ans = Solution()\n",
+    "ans.findClosest(words, word1 , word2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ca455d4-1cb6-4ee7-8b5d-c5176e68173b",
+   "metadata": {},
+   "source": [
+    "# 95 LCR 005. 最大单词长度乘积\n",
+    "https://leetcode.cn/problems/aseY1I/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 419,
+   "id": "c4639c2a-f4f3-468a-99fc-1d2901bc86fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 419,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from itertools import combinations\n",
+    "class Solution:\n",
+    "    def maxProduct(self, words):\n",
+    "        s = [[set(i), i] for i in words]\n",
+    "        res = 0\n",
+    "        for i in combinations(s, 2):\n",
+    "            if not i[0][0] &i[1][0]:\n",
+    "                res = max(len(i[0][1]) * len(i[1][1]), res)\n",
+    "        return res\n",
+    "        \n",
+    "        \n",
+    "words = [\"abcw\",\"baz\",\"foo\",\"bar\",\"fxyz\",\"abcdef\"]\n",
+    "words = [\"a\",\"ab\",\"abc\",\"d\",\"cd\",\"bcd\",\"abcd\"]\n",
+    "words = [\"a\",\"aa\",\"aaa\",\"aaaa\"]\n",
+    "ans = Solution()\n",
+    "ans.maxProduct(words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b2c48bc-1b70-419e-8d85-33777d0bf4e8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
